# tauri-todo-list

./: .gitignore  package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  todo_storage.rs  util.rs
src-tauri/src/database/: mod.rs  priority.rs
src-tauri/src/database/models/: mod.rs  tag_item_bind.rs  tags.rs  todo_item.rs
src/tauri_bind/: IdIsUndefinedError.ts  tag.ts  todoItem.ts
