[package]
name = "todo-list"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.1", features = ["api-all"] }
sqlx = { version = "0.5", features = ["sqlite", "runtime-tokio-rustls"] }
sea-query = { version = "0.25", features = ["sqlx-sqlite", "with-chrono"] }
chrono = { version = "0.4.22", features = ["serde"] }
tap = "1.0.1"
tokio = { version = "1.21.2", features = ["full"] }
sea-query-binder = { version = "0.1.0", features = ["with-chrono", "sqlx-sqlite"] }
once_cell = "1.15.0"
futures = "0.3.24"
thiserror = "1.0.37"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
